--- a/src/themes/components/grid/_grid-theme.scss
+++ b/src/themes/components/grid/_grid-theme.scss
@@ -1,4 +1,101 @@
+@function igx-grid-theme(
+    $background: null,
+    $cell-text-color: null,
+    $heading-text-color: null,
+    $row-border-color: null,
+    $row-hover-background: null,
+    $row-selected-background: null,
+    $row-selected-text-color: null,
+    $cell-selected-background: null,
+    $cell-selected-text-color: null
+    ) {
+
+    @if (
+        not($cell-text-color)
+        or $cell-text-color != igx-color($default-palette, 'grays', 800))
+        and $background {
+        $cell-text-color: text-contrast($background);
+    }
+
+    @if (
+        not($cell-selected-text-color)
+        or $cell-selected-text-color != igx-contrast-color($default-palette, 'accent'))
+        and $cell-selected-background {
+        $cell-selected-text-color: text-contrast($cell-selected-background);
+    }
+
+    @if (
+        not($row-selected-text-color)
+        or $row-selected-text-color != igx-color($default-palette, 'grays', 900))
+        and $row-selected-background {
+        $row-selected-text-color: text-contrast($row-selected-background);
+    }
+
+    @return (
+        background: $background,
+        cell-text-color: $cell-text-color,
+        heading-text-color: $heading-text-color,
+        row-border-color: $row-border-color,
+        row-hover-background: $row-hover-background,
+        row-selected-background: $row-selected-background,
+        row-selected-text-color: $row-selected-text-color,
+        cell-selected-background: $cell-selected-background,
+        cell-selected-text-color: $cell-selected-text-color
+    );
+}
+
 @mixin igx-grid($theme, $palette: $default-palette) {
+    $default-theme: igx-grid-theme(
+        $background: $white,
+        $cell-text-color: igx-color($palette, 'grays', 800),
+        $heading-text-color: igx-color($palette, 'grays', 600),
+        $row-border-color: igx-color($palette, 'grays', 300),
+        $row-hover-background: igx-color($palette, 'grays', 100),
+        $row-selected-background: igx-color($palette, 'grays', 900),
+        $row-selected-text-color: igx-contrast-color($palette, 'grays', 900),
+        $cell-selected-background: igx-color($palette, 'accent'),
+        $cell-selected-text-color: igx-contrast-color($palette, 'accent')
+    );
+
+    $this: extend($default-theme, $theme);
+
+    @debug $this;
+
+    // General
+    $grid-bg: map-get($this, 'background') !default;
+    $grid-br: em(2px) !default;
+    $grid-shadow: $elevate-2 !default;
+
+    // Caption
+    $grid-caption-fs: em(20px) !default;
+    $grid-caption-lh: em(32px) !default;
+    $grid-caption-padding: em(16px) em(24px) !default;
+
+    // Heading
+    $grid-head-fs: em(12px) !default;
+    $grid-head-fw: 600 !default;
+    $grid-head-color: map-get($this, 'heading-text-color') !default;
+    $grid-head-icon-size: rem(16px) !default;
+    $grid-head-icon-lh: rem(16px) !default;
+    $grid-head-icon-padding: em(8px) !default;
+
+    // Row
+    $grid-row-bg: inherit !default;
+    $grid-row-bg-selected: map-get($this, 'row-selected-background') !default;
+    $grid-row-color-selected: map-get($this, 'row-selected-text-color') !default;
+    $grid-row-bb: 1px solid palette(gray, 300) !default;
+    $grid-row-hover: $off-white !default;
+    $grid-row-transition: none !default;
+
+    // Cell
+    $grid-cell-padding: rem(16px) rem(24px) !default;
+    $grid-cell-align-num: right !default;
+    $grid-cell-fs: rem(13px) !default;
+    $grid-cell-lh: rem(16px) !default;
+    $grid-cell-color: map-get($this, 'cell-text-color') !default;
+    $grid-cell-selected-bg: map-get($this, 'cell-selected-background') !default;
+    $grid-cell-selected-color: map-get($this, 'cell-selected-text-color') !default;
+
     %grid-display {
         display: grid;
         grid-template-rows: min-content;
@@ -9,6 +106,7 @@
         outline-style: none;
         overflow-x: auto;
     }
+
     %grid-caption {
         display: flex;
         align-items: center;
@@ -16,9 +114,11 @@
         line-height: $grid-caption-lh;
         padding: $grid-caption-padding;
     }
+
     %grid-thead i {
         font-size: $grid-head-icon-size;
     }
+
     %grid-thead,
     %grid-tfoot {
         display: block;
@@ -29,16 +129,19 @@
             }
         }
     }
+
     %grid-tbody {
         position: relative;
         overflow-y: scroll;
         will-change: transform;
     }
+
     %grid-tbody--empty {
         display: flex;
         justify-content: center;
         text-align: center;
     }
+
     %grid-row {
         display: flex;
         background: $grid-row-bg;
@@ -51,6 +154,7 @@
             background: $grid-row-hover;
         }
     }
+
     %grid-row--selected {
         color: $grid-row-color-selected;
         background-color: $grid-row-bg-selected;
@@ -60,6 +164,7 @@
             background: $grid-row-bg-selected;
         }
     }
+
     %grid-cell-display {
         flex: 1;
         outline-style: none;
@@ -72,20 +177,24 @@
         white-space: nowrap;
         text-overflow: ellipsis;
     }
+
     %grid-cell--fixed-width {
         flex-grow: 0;
     }
+
     %grid-cell-number {
         text-align: $grid-cell-align-num;
     }
+
     %grid-cell--selected {
-        color: $white;
-        background-color: $secondary-color !important;
+        color: $grid-cell-selected-color;
+        background-color: $grid-cell-selected-bg !important;
         border-bottom: 0;
         margin-bottom: -1px;
         box-shadow: inset 0 3px 1px rgba(0, 0, 0, .12);
         z-index: 10;
     }
+
     %grid-cell-header {
         display: flex;
         position: relative;
