--- a/src/themes/components/progress/_progress-theme.scss
+++ b/src/themes/components/progress/_progress-theme.scss
@@ -1,92 +1,162 @@
 // Linear Progress
-%progress-linear-display {
-    display: flex;
-    position: relative;
-    align-items: center;
-    justify-content: flex-start;
-    flex-flow: column nowrap;
-    width: 100%;
-    height: 5px;
-    margin-bottom: 32px;
-    background: $progressbar-color;
-}
-
-%progressbar-display {
-    width: inherit;
-    height: inherit;
-    align-self: flex-start;
-}
-
-%progressbar--striped > div {
-    background-image: linear-gradient(
-        45deg,
-        $progressbar-stripe-color 25%,
-        transparent 25%,
-        transparent 50%,
-        $progressbar-stripe-color 50%,
-        $progressbar-stripe-color 75%,
-        transparent 75%,
-        transparent
+@function igx-progress-linear-theme(
+    $track-color: null,
+    $fill-color-default: null,
+    $fill-color-danger: null,
+    $fill-color-warning: null,
+    $fill-color-info: null,
+    $fill-color-success: null,
+    $stripes-color: null,
+    $text-color: null
+    ) {
+    @return (
+        track-color: $track-color,
+        fill-color-default: $fill-color-default,
+        fill-color-danger: $fill-color-danger,
+        fill-color-warning: $fill-color-warning,
+        fill-color-info: $fill-color-info,
+        fill-color-success: $fill-color-success,
+        stripes-color: $stripes-color,
+        text-color: $text-color
     );
-    -webkit-background-size: 40px 40px;
-    background-size: 40px 40px;
 }
 
-%progress-linear-value {
-    margin: $progressbar-value-margin;
-    position: absolute;
-    color: $off-black;
-    font-size: $progressbar-value-fz;
-    align-self: flex-start;
-    font-weight: $progressbar-value-fw;
-}
+@mixin igx-progress-linear($theme, $palette: $default-palette) {
+    $default-theme: igx-progress-linear-theme(
+        $track-color: rgba(igx-color($palette, 'primary'), .1),
+        $fill-color-default: igx-color($palette, 'primary'),
+        $fill-color-danger: igx-color($palette, 'warn', 800),
+        $fill-color-warning: igx-color($palette, 'warn'),
+        $fill-color-info: igx-color($palette, 'accent'),
+        $fill-color-success: $success-color,
+        $stripes-color: transperantize($white, .5),
+        $text-color: igx-color($palette, 'grays', 800)
+    );
+    
+    $this: extend($default-theme, $theme);
+    
+    @debug $this;
 
-%progressbar--default {
-    background-color: $primary-color;
-}
+    $progressbar-color: map-get($this, 'track-color') !default;
+    $progressbar-default-color: map-get($this, 'fill-color-default') !default;
+    $progressbar-danger-color: map-get($this, 'fill-color-danger') !default;
+    $progressbar-warning-color: map-get($this, 'fill-color-warning') !default;
+    $progressbar-info-color: map-get($this, 'fill-color-info') !default;
+    $progressbar-success-color: map-get($this, 'fill-color-success') !default;
+    $progressbar-stripe-color: map-get($this, 'stripes-color') !default;
+    $progressbar-text-color: map-get($this, 'text-color') !default;
+    $progressbar-value-fz: em(14px, 16px) !default;
+    $progressbar-value-fw: 600 !default;
+    $progressbar-value-margin: 10px 5px !default;
 
-%progressbar--danger {
-    background-color: $error-color;
-}
+    %progress-linear-display {
+        display: flex;
+        position: relative;
+        align-items: center;
+        justify-content: flex-start;
+        flex-flow: column nowrap;
+        width: 100%;
+        height: 5px;
+        margin-bottom: 32px;
+        background: $progressbar-color;
+    }
 
-%progressbar--warning {
-    background-color: $warn-color;
-}
+    %progressbar-display {
+        width: inherit;
+        height: inherit;
+        align-self: flex-start;
+    }
 
-%progressbar--info {
-    background-color: $secondary-color;
-}
+    %progressbar--striped > div {
+        background-image: linear-gradient(
+            45deg,
+            $progressbar-stripe-color 25%,
+            transparent 25%,
+            transparent 50%,
+            $progressbar-stripe-color 50%,
+            $progressbar-stripe-color 75%,
+            transparent 75%,
+            transparent
+        );
+        -webkit-background-size: 40px 40px;
+        background-size: 40px 40px;
+    }
 
-%progressbar--success {
-    background-color: $success-color;
-}
+    %progress-linear-value {
+        margin: $progressbar-value-margin;
+        position: absolute;
+        color: $progressbar-text-color;
+        font-size: $progressbar-value-fz;
+        align-self: flex-start;
+        font-weight: $progressbar-value-fw;
+    }
 
+    %progressbar--default {
+        background-color: $progressbar-default-color;
+    }
+
+    %progressbar--danger {
+        background-color: $progressbar-danger-color;
+    }
+
+    %progressbar--warning {
+        background-color: $progressbar-warning-color;
+    }
+
+    %progressbar--info {
+        background-color: $progressbar-info-color;
+    }
+
+    %progressbar--success {
+        background-color: $progressbar-success-color;
+    }
+}
 // Circular Progress
-%progress-circular-display {
-    width: 100%;
-    height: 100%;
+@function igx-progress-circular-theme($stroke-color: null, $value-color: null) {
+    @return (
+        stroke-color: $stroke-color,
+        value-color: $value-color
+    );
 }
 
-%progress-circular-innercircle {
-    stroke-width: 4;
-    fill: transparent;
-    stroke: $primary-color;
-    stroke-opacity: .1;
-}
+@mixin igx-progress-circular($theme, $palette: $default-palette) {
+    $default-theme: igx-progress-circular-theme(
+        $stroke-color: igx-color($palette, 'primary'),
+        $value-color: igx-color($palette, 'grays', 800)
+    );
 
-%progress-circular-circle {
-    fill: transparent;
-    stroke: url('#linear');
-    stroke-width: 6;
-    stroke-linecap: round;
-    stroke-dashoffset: 289;
-    stroke-dasharray: 289;
-    transform-origin: 50% 50%;
-    transform: rotate(-90deg);
-}
+    $this: extend($default-theme, $theme);
 
-%progress-circular-text {
-    font-family: 'Titillium Web', sans-serif;
-    font-size: $progress-circular-value-fz;
-    fill: $off-black;
+    @debug $this;
+    
+    $progress-circular-value-fz: em(32px, 16px);
+
+    %progress-circular-display {
+        width: 100%;
+        height: 100%;
+    }
+
+    %progress-circular-innercircle {
+        stroke-width: 4;
+        fill: transparent;
+        stroke: map-get($this, 'stoke-color');
+        stroke-opacity: .1;
+    }
+
+    %progress-circular-circle {
+        fill: transparent;
+        stroke: url('#linear');
+        stroke-width: 6;
+        stroke-linecap: round;
+        stroke-dashoffset: 289;
+        stroke-dasharray: 289;
+        transform-origin: 50% 50%;
+        transform: rotate(-90deg);
+    }
+
+    %progress-circular-text {
+        font-family: 'Titillium Web', sans-serif;
+        font-size: $progress-circular-value-fz;
+        fill: map-get($this, 'value-color');
+    }
 }
