--- a/src/themes/components/radio/_radio-theme.scss
+++ b/src/themes/components/radio/_radio-theme.scss
@@ -1,62 +1,86 @@
-%igx-radio-lbl-display {
-    display: inline-block;
-    position: relative;
-    cursor: pointer;
-    height: $radio-height;
-    line-height: $radio-height;
-    font-size: $input-font-size;
-    color: $input-color;
-    padding-left: $checkbox-label-padding;
-    user-select: none;
+@function igx-radio-theme($color: null) {
+    @return (
+        color: $color
+    );
+}
 
-    &::before, &::after {
-        position: absolute;
-        content: '';
-        width: $radio-width;
+@mixin igx-radio($theme, $palette: $default-palette) {
+    $default-theme: igx-radio-theme(
+        $color: igx-color($palette, 'accent')
+    );
+
+    $this: extend($default-theme, $theme);
+
+    @debug $this;
+
+    $radio-fill-color: map-get($this, 'color') !default;
+    $radio-empty-color: igx-color($palette, 'grays', 600) !default;
+    $radio-border-style: 2px solid !default;
+    $radio-border: $radio-border-style $radio-fill-color !default;
+    $radio-width: 20px !default;
+    $radio-height: $radio-width !default;
+    $radio-radius: 50% 50% !default; // Switches
+
+    %igx-radio-lbl-display {
+        display: inline-block;
+        position: relative;
+        cursor: pointer;
         height: $radio-height;
-        left: 0;
-        border-radius: $radio-radius;
+        line-height: $radio-height;
+        font-size: $input-font-size;
+        color: $input-color;
+        padding-left: $checkbox-label-padding;
+        user-select: none;
+
+        &::before, &::after {
+            position: absolute;
+            content: '';
+            width: $radio-width;
+            height: $radio-height;
+            left: 0;
+            border-radius: $radio-radius;
+        }
+
+        &::before {
+            backface-visibility: hidden;
+            transform: translateZ(0);
+            transition: $input-transition;
+        }
     }
 
-    &::before {
-        backface-visibility: hidden;
-        transform: translateZ(0);
-        transition: $input-transition;
+    %igx-radio-lbl-notchecked--before {
+        transform: scale3d(0, 0, 0);
     }
-}
 
-%igx-radio-lbl-notchecked--before {
-    transform: scale3d(0, 0, 0);
-}
+    %igx-radio-lbl-notchecked--after {
+        border: $radio-border-style $radio-empty-color;
+    }
 
-%igx-radio-lbl-notchecked--after {
-    border: $radio-border-style $radio-empty-color;
-}
+    %igx-radio-lbl-checked--before {
+        border: $radio-border;
+        background-color: $radio-fill-color;
+        transform: scale3d(.5, .5, .5);
+    }
 
-%igx-radio-lbl-checked--before {
-    border: $radio-border;
-    background-color: $radio-fill-color;
-    transform: scale3d(.5, .5, .5);
-}
+    %igx-radio-lbl-checked--after {
+        border: $radio-border;
+    }
 
-%igx-radio-lbl-checked--after {
-    border: $radio-border;
-}
+    %igx-radio-lbl--disabled {
+        pointer-events: none;
+        color: $input-disabled-color;
+    }
 
-%igx-radio-lbl--disabled {
-    pointer-events: none;
-    color: $input-disabled-color;
-}
+    %igx-radio-lbl-notchecked--disabled-after {
+        border: $radio-border-style $input-disabled-color;
+    }
 
-%igx-radio-lbl-notchecked--disabled-after {
-    border: $radio-border-style $input-disabled-color;
-}
+    %igx-radio-lbl-checked--disabled-before {
+        background-color: $input-disabled-color;
+        border: $radio-border-style transparent;
+    }
 
-%igx-radio-lbl-checked--disabled-before {
-    background-color: $input-disabled-color;
-    border: $radio-border-style transparent;
-}
-
-%igx-radio-lbl-checked--disabled-after {
-    border: $radio-border-style $input-disabled-color;
+    %igx-radio-lbl-checked--disabled-after {
+        border: $radio-border-style $input-disabled-color;
+    }
 }
