--- a/src/themes/components/scroll/_scroll-theme.scss
+++ b/src/themes/components/scroll/_scroll-theme.scss
@@ -1,10 +1,22 @@
-.igx-scroll__viewport {
-  display: inline-block;
-  overflow-y: hidden;
+@function igx-scroll-theme() {
+  @return ();
 }
 
-.igx-scroll__vertical {
-  display: inline-block;
-  width: 20px;
-  overflow-y: auto;
+@mixin igx-scroll($theme, $palette: $default-palette) {
+  $default-theme: igx-scroll-theme();
+
+  $this: extend($default-theme, $theme);
+
+  @debug $this;
+
+  .igx-scroll__viewport {
+    display: inline-block;
+    overflow-y: hidden;
+  }
+
+  .igx-scroll__vertical {
+    display: inline-block;
+    width: 20px;
+    overflow-y: auto;
+  }
 }
