some additional demos fixes

--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -48,6 +48,11 @@
                     <span>Grid</span>
                 </span>
 
+                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/gridPerformance">
+                    <igx-icon fontSet="material" name="view_column"></igx-icon>
+                    <span>Grid Performance</span>
+                </span>
+
                 <span class="nav-item" [routerLinkActive]="'active'" routerLink="/dialog">
                     <igx-icon fontSet="material" name="all_out"></igx-icon>
                     <span>Dialog</span>
